--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 </head>
 
 <body>
-
+  <header class="header-bg">
+    <div class="header">
+      <a href="./">
+        <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
+      </a>
+      <nav aria-label="primária">
+        <ul class="header-menu">
+          <li><a href="./bicycles.html">Bicicletas</a></li>
+          <li><a href="./insurance.html">Seguros</a></li>
+          <li><a href="./contact.html">Contatos</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 
 </html>
