--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <title>Bikcraft - Bicicletas Elétricas</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -24,6 +27,19 @@
       </nav>
     </div>
   </header>
+
+  <main class="intro-bg">
+    <div class="intro">
+      <div class="intro-content">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicycles.html">selecione a sua</a>
+      </div>
+      <div>
+        <img src="./img/pictures/introduction.jpg" alt="Bibicleta elétrica preta">
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
