--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
       </a>
       <nav aria-label="primária">
-        <ul class="header-menu">
+        <ul class="header-menu font-1-m color-0">
           <li><a href="./bicycles.html">Bicicletas</a></li>
           <li><a href="./insurance.html">Seguros</a></li>
           <li><a href="./contact.html">Contatos</a></li>
@@ -31,9 +31,9 @@
   <main class="intro-bg">
     <div class="intro">
       <div class="intro-content">
-        <h1>Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="./bicycles.html">selecione a sua</a>
+        <h1 class="font-1-xxl color-0">Bicicletas feitas sob medida<span class="color-primary-1">.</span></h1>
+        <p class="font-2-l color-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="button" href="./bicycles.html">selecione a sua</a>
       </div>
       <div>
         <img src="./img/pictures/introduction.jpg" alt="Bibicleta elétrica preta">
