--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./">
         <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
       </a>
@@ -29,7 +29,7 @@
   </header>
 
   <main class="intro-bg">
-    <div class="intro">
+    <div class="intro container">
       <div class="intro-content">
         <h1 class="font-1-xxl color-0">Bicicletas feitas sob medida<span class="color-primary-1">.</span></h1>
         <p class="font-2-l color-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -40,6 +40,33 @@
       </div>
     </div>
   </main>
+
+  <article class="bicycle-list">
+    <h2 class="font-1-xxl container">escolha a sua<span class="color-primary-1">.</span></h2>
+    <ul>
+      <li>
+        <a href="./bicycles/magic.html">
+          <img src="./img/bicycles/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Magic Might</h3>
+          <span class="front-2-m">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicycles/nimbus.html">
+          <img src="./img/bicycles/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="front-2-m">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicycles/nebula.html">
+          <img src="./img/bicycles/nebula-home.jpg" alt="Bicicleta cinza">
+          <h3 class="font-1-xl">Nebula Cosmic</h3>
+          <span class="front-2-m">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
 </body>
 
 </html>
