--- a/index.html
+++ b/index.html
@@ -67,6 +67,33 @@
       </li>
     </ul>
   </article>
+
+  <article class="technology-bg">
+    <div class="technology container">
+      <div class="technology-content">
+        <span class="font-2-l-b color-5">tecnologia avançada</span>
+        <h2 class="font-1-xxl color-0">você escolhe as suas cores e componentes<span class="color-primary-1">.</span></h2>
+        <p class="font-2-l color-5">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a class="link" href="/bicycles.html">escolha um modelo</a>
+
+        <div class="technology-content-advantage">
+          <div>
+            <img src="./img/icons/electric.svg" alt="">
+            <h3 class="font-1-l color-0">Motor Elétrico</h3>
+            <p class="font-2-s color-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="./img/icons/tracker.svg" alt="">
+            <h3 class="font-1-l color-0">Rastreador</h3>
+            <p class="font-2-s color-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+      <div class="technology-image">
+        <img src="./img/pictures/technology.jpg" alt="">
+      </div>
+    </div>
+  </article>
 </body>
 
 </html>
