--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
       </div>
     </div>
   </article>
+  <section class="partners" aria-label="Nossos parceiros">
+    <h2 class="container font-1-xxl">nossos parceiros<span class="color-primary-1">.</span> </h2>
+    <ul>
+      <li><img src="./img/partners/caravan.svg" alt="caravan"></li>
+      <li><img src="./img/partners/dogs.svg" alt="dogs"></li>
+      <li><img src="./img/partners/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./img/partners/handel.svg" alt="handel"></li>
+      <li><img src="./img/partners/lescone.svg" alt="lescone"></li>
+      <li><img src="./img/partners/ranek.svg" alt="ranek"></li>
+      <li><img src="./img/partners/surfbot.svg" alt="surfbot"></li>
+      <li><img src="./img/partners/wildbeast.svg" alt="wildbeast"></li>
+    </ul>
+  </section>
 </body>
 
 </html>
