--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Bikcraft - Bicicletas Elétricas</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -106,6 +106,17 @@
       <li><img src="./img/partners/surfbot.svg" alt="surfbot"></li>
       <li><img src="./img/partners/wildbeast.svg" alt="wildbeast"></li>
     </ul>
+  </section>
+  <section class="testimony" aria-label="Depoimento">
+    <div>
+      <img src="./img/pictures/testimony.jpg" alt="">
+    </div>
+    <div class="testimony-content">
+      <blockquote class="font-1-xl color-primary-5">
+        <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
+      </blockquote>
+      <span class="font-1-m-b color-primary-4">Ana Júlia</span>
+    </div>
   </section>
 </body>
 
