creates bicycle detail page nimbus, magic and nebula

--- a/bicycles.html
+++ b/bicycles.html
@@ -76,7 +76,7 @@
           </div>
 
           <div class="bicycles-content">
-            <h2 class="font-1-xl color-0">Magic</h2>
+            <h2 class="font-1-xl color-0">Magic Might</h2>
             <p class="font-2-s color-5">A Magic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
             <ul class="font-1-m color-5">
               <li>
@@ -104,11 +104,11 @@
       <div class="bicycles container">
         <div class="bicycles-image">
           <img src="./img/bicycles/nebula.jpg" alt="Bicicleta Preta modelo Nebula">
-          <span class="font-2-m color-0">R$ 2499</span>
+          <span class="font-2-m color-0">R$ 3999</span>
         </div>
 
         <div class="bicycles-content">
-          <h2 class="font-1-xl color-11">Nebula</h2>
+          <h2 class="font-1-xl color-11">Nebula Cosmic</h2>
           <p class="font-2-s color-8">A Nebula é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m color-8">
             <li>
