--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Termos e condições de uso gerais.">
+  <meta name="description" content="Entre em contato conosco.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
-  <title>Termos e Condições | Bikcraft</title>
+  <title>Contatos | Bikcraft</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body id="contact">
   <header class="header-bg">
     <div class="header container">
       <a href="./">
@@ -87,6 +87,44 @@
       </section>
     </div>
   </main>
+
+  <article class="store container">
+    <h2 class="font-1-xxl">lojas locais<span class="color-primary-1">.</span> </h2>
+
+    <div class="store-item">
+      <img src="./img/stores/rj.jpg" alt="Local no mapa da loja do Rio de Janeiro localizada em Rua Ali Perto, n. 25, Rio de Janeiro/RJ">
+
+      <div class="store-content">
+        <h3 class="font-1-xl">Rio de Janeiro</h3>
+        <div class="store-data font-2-s color-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>Rio de Janeiro - RJ</p>
+        </div>
+        <div class="store-data font-2-s color-8">
+          <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+          <a href="tel:+552199999999">21 9999-9999</a>
+        </div>
+        <p class="store-hours font-1-s"><img src="./img/icons/horary.svg" alt="">08-18h de seg à dom</p>
+      </div>
+    </div>
+
+    <div class="store-item">
+      <img src="./img/stores/sp.jpg" alt="Local no mapa da loja de São Paulo localizada em Rua Ali Perto, n. 25, São Paulo/SP">
+
+      <div class="store-content">
+        <h3 class="font-1-xl">São Paulo</h3>
+        <div class="store-data font-2-s color-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>São Paulo - SP</p>
+        </div>
+        <div class="store-data font-2-s color-8">
+          <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+          <a href="tel:+551199999999">11 9999-9999</a>
+        </div>
+        <p class="store-hours font-1-s"><img src="./img/icons/horary.svg" alt="">08-18h de seg à dom</p>
+      </div>
+    </div>
+  </article>
 
   <footer class="footer-bg">
     <div class="footer container">
