--- a/bicycles/magic.html
+++ b/bicycles/magic.html
@@ -46,7 +46,7 @@
         <p class="font-2-l color-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
         <div class="bicycle-buy">
-          <a class="button" href="../">comprar agora</a>
+          <a class="button" href="../budget.html">comprar agora</a>
           <span class="font-1-xs color-6"><img src="../img/icons/delivery.svg" alt="">entrega em 5 dias</span>
           <span class="font-1-xs color-6"><img src="../img/icons/stock.svg" alt="">18 em estoque</span>
         </div>
@@ -92,7 +92,7 @@
     <h2 class="font-1-xxl">escolha a sua<span class="color-primary-1">.</span></h2>
     <ul>
       <li>
-        <a href="./magic.html">
+        <a href="./nimbus.html">
           <img src="../img/bicycles/nimbus.jpg" alt="Bicicleta preta modelo Nimbus Stark">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="front-2-m">R$ 4999</span>
