--- a/bicycles/nimbus.html
+++ b/bicycles/nimbus.html
@@ -46,7 +46,7 @@
         <p class="font-2-l color-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
         <div class="bicycle-buy">
-          <a class="button" href="../">comprar agora</a>
+          <a class="button" href="../budget.html">comprar agora</a>
           <span class="font-1-xs color-6"><img src="../img/icons/delivery.svg" alt="">entrega em 5 dias</span>
           <span class="font-1-xs color-6"><img src="../img/icons/stock.svg" alt="">18 em estoque</span>
         </div>
