image performance optimizations

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Contatos | Bikcraft</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -16,7 +17,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
       </a>
       <nav aria-label="primária">
         <ul class="header-menu font-1-m color-0">
@@ -53,13 +54,13 @@
 
         <div class="contact-media">
           <a href="/">
-            <img src="./img/media/instagram-p.svg" alt="Instagram">
+            <img src="./img/media/instagram-p.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="/">
-            <img src="./img/media/facebook-p.svg" alt="Facebook">
+            <img src="./img/media/facebook-p.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="/">
-            <img src="./img/media/youtube-p.svg" alt="Youtube">
+            <img src="./img/media/youtube-p.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </section>
@@ -92,7 +93,7 @@
     <h2 class="font-1-xxl">lojas locais<span class="color-primary-1">.</span> </h2>
 
     <div class="store-item">
-      <img src="./img/stores/rj.jpg" alt="Local no mapa da loja do Rio de Janeiro localizada em Rua Ali Perto, n. 25, Rio de Janeiro/RJ">
+      <img src="./img/stores/rj.jpg" width="562" height="260" alt="Local no mapa da loja do Rio de Janeiro localizada em Rua Ali Perto, n. 25, Rio de Janeiro/RJ">
 
       <div class="store-content">
         <h3 class="font-1-xl">Rio de Janeiro</h3>
@@ -104,12 +105,12 @@
           <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
           <a href="tel:+552199999999">21 9999-9999</a>
         </div>
-        <p class="store-hours font-1-s"><img src="./img/icons/horary.svg" alt="">08-18h de seg à dom</p>
+        <p class="store-hours font-1-s"><img src="./img/icons/horary.svg" width="20" height="20" alt="">08-18h de seg à dom</p>
       </div>
     </div>
 
     <div class="store-item">
-      <img src="./img/stores/sp.jpg" alt="Local no mapa da loja de São Paulo localizada em Rua Ali Perto, n. 25, São Paulo/SP">
+      <img src="./img/stores/sp.jpg" width="562" height="260" alt="Local no mapa da loja de São Paulo localizada em Rua Ali Perto, n. 25, São Paulo/SP">
 
       <div class="store-content">
         <h3 class="font-1-xl">São Paulo</h3>
@@ -121,14 +122,14 @@
           <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
           <a href="tel:+551199999999">11 9999-9999</a>
         </div>
-        <p class="store-hours font-1-s"><img src="./img/icons/horary.svg" alt="">08-18h de seg à dom</p>
+        <p class="store-hours font-1-s"><img src="./img/icons/horary.svg" width="20" height="20" alt="">08-18h de seg à dom</p>
       </div>
     </div>
   </article>
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
       <div>
         <h2 class="font-2-l-b color-0">CONTATO</h2>
@@ -140,13 +141,13 @@
         </ul>
         <div class="footer-media">
           <a href="/">
-            <img src="./img/media/instagram.svg" alt="Instagram">
+            <img src="./img/media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="/">
-            <img src="./img/media/facebook.svg" alt="Facebook">
+            <img src="./img/media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="/">
-            <img src="./img/media/youtube.svg" alt="Youtube">
+            <img src="./img/media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
