--- a/bicycles.html
+++ b/bicycles.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Nossas Bicicletas | Bikcraft</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -16,7 +17,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
       </a>
       <nav aria-label="primária">
         <ul class="header-menu font-1-m color-0">
@@ -39,7 +40,7 @@
     <main>
       <div class="bicycles container">
         <div class="bicycles-image">
-          <img src="./img/bicycles/nimbus.jpg" alt="Bicicleta Preta modelo Nimbus Stark">
+          <img src="./img/bicycles/nimbus.jpg" width="1120" height="680" alt="Bicicleta Preta modelo Nimbus Stark">
           <span class="font-2-m color-0">R$ 4999</span>
         </div>
 
@@ -48,19 +49,19 @@
           <p class="font-2-s color-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m color-8">
             <li>
-              <img src="./img/icons/electric.svg" alt="">
+              <img src="./img/icons/electric.svg" width="32" height="32" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icons/carbon.svg" alt="">
+              <img src="./img/icons/carbon.svg" width="32" height="32" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icons/speed.svg" alt="">
+              <img src="./img/icons/speed.svg" width="32" height="32" alt="">
               50 km/h
             </li>
             <li>
-              <img src="./img/icons/tracker.svg" alt="">
+              <img src="./img/icons/tracker.svg" width="32" height="32" alt="">
               Rastreador
             </li>
           </ul>
@@ -71,7 +72,7 @@
       <div class="bicycles-bg">
         <div class="bicycles container">
           <div class="bicycles-image">
-            <img src="./img/bicycles/magic.jpg" alt="Bicicleta Preta modelo Magic">
+            <img src="./img/bicycles/magic.jpg" width="1120" height="680" alt="Bicicleta Preta modelo Magic">
             <span class="font-2-m color-0">R$ 2499</span>
           </div>
 
@@ -80,19 +81,19 @@
             <p class="font-2-s color-5">A Magic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
             <ul class="font-1-m color-5">
               <li>
-                <img src="./img/icons/electric.svg" alt="">
+                <img src="./img/icons/electric.svg" width="32" height="32" alt="">
                 Motor Elétrico
               </li>
               <li>
-                <img src="./img/icons/carbon.svg" alt="">
+                <img src="./img/icons/carbon.svg" width="32" height="32" alt="">
                 Fibra de Carbono
               </li>
               <li>
-                <img src="./img/icons/speed.svg" alt="">
+                <img src="./img/icons/speed.svg" width="32" height="32" alt="">
                 45 km/h
               </li>
               <li>
-                <img src="./img/icons/tracker.svg" alt="">
+                <img src="./img/icons/tracker.svg" width="32" height="32" alt="">
                 Rastreador
               </li>
             </ul>
@@ -103,7 +104,7 @@
 
       <div class="bicycles container">
         <div class="bicycles-image">
-          <img src="./img/bicycles/nebula.jpg" alt="Bicicleta Preta modelo Nebula">
+          <img src="./img/bicycles/nebula.jpg" width="1120" height="680" alt="Bicicleta Preta modelo Nebula">
           <span class="font-2-m color-0">R$ 3999</span>
         </div>
 
@@ -112,19 +113,19 @@
           <p class="font-2-s color-8">A Nebula é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m color-8">
             <li>
-              <img src="./img/icons/electric.svg" alt="">
+              <img src="./img/icons/electric.svg" width="32" height="32" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icons/carbon.svg" alt="">
+              <img src="./img/icons/carbon.svg" width="32" height="32" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icons/speed.svg" alt="">
+              <img src="./img/icons/speed.svg" width="32" height="32" alt="">
               40 km/h
             </li>
             <li>
-              <img src="./img/icons/tracker.svg" alt="">
+              <img src="./img/icons/tracker.svg" width="32" height="32" alt="">
               Rastreador
             </li>
           </ul>
@@ -137,7 +138,7 @@
 
     <footer class="footer-bg">
       <div class="footer container">
-        <img src="./img/bikcraft.svg" alt="Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
         <div>
           <h2 class="font-2-l-b color-0">CONTATO</h2>
@@ -149,13 +150,13 @@
           </ul>
           <div class="footer-media">
             <a href="/">
-              <img src="./img/media/instagram.svg" alt="Instagram">
+              <img src="./img/media/instagram.svg" width="32" height="32" alt="Instagram">
             </a>
             <a href="/">
-              <img src="./img/media/facebook.svg" alt="Facebook">
+              <img src="./img/media/facebook.svg" width="32" height="32" alt="Facebook">
             </a>
             <a href="/">
-              <img src="./img/media/youtube.svg" alt="Youtube">
+              <img src="./img/media/youtube.svg" width="32" height="32" alt="Youtube">
             </a>
           </div>
         </div>
