--- a/bicycles/nimbus.html
+++ b/bicycles/nimbus.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Nimbus Stark | Bikcraft</title>
+  <link rel="preload" href="../css/style.css" as="style">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -16,7 +17,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="../">
-        <img src="../img/bikcraft.svg" alt="Logo Bikcraft">
+        <img src="../img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
       </a>
       <nav aria-label="primária">
         <ul class="header-menu font-1-m color-0">
@@ -38,38 +39,38 @@
 
     <div class="bicycle container">
       <div class="bicycle-image">
-        <img src="../img/bicycle/nimbus1.jpg" alt="Bicicleta preta modelo Nimbus Stark">
-        <img src="../img/bicycle/nimbus2.jpg" alt="Bicicleta preta modelo Nimbus Stark">
-        <img src="../img/bicycle/nimbus3.jpg" alt="Bicicleta preta modelo Nimbus Stark">
+        <img src="../img/bicycle/nimbus1.jpg" width="1120" height="880" alt="Bicicleta preta modelo Nimbus Stark">
+        <img src="../img/bicycle/nimbus2.jpg" width="1120" height="880" alt="Bicicleta preta modelo Nimbus Stark">
+        <img src="../img/bicycle/nimbus3.jpg" width="1120" height="880" alt="Bicicleta preta modelo Nimbus Stark">
       </div>
       <div class="bicycle-content">
         <p class="font-2-l color-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-
+width="136" height="32" 
         <div class="bicycle-buy">
           <a class="button" href="../budget.html">comprar agora</a>
-          <span class="font-1-xs color-6"><img src="../img/icons/delivery.svg" alt="">entrega em 5 dias</span>
-          <span class="font-1-xs color-6"><img src="../img/icons/stock.svg" alt="">18 em estoque</span>
+          <span class="font-1-xs color-6"><img src="../img/icons/delivery.svg" width="16" height="16" alt="">entrega em 5 dias</span>
+          <span class="font-1-xs color-6"><img src="../img/icons/stock.svg" width="16" height="16" alt="">18 em estoque</span>
         </div>
 
         <h2 class="font-1-xs color-0">informações</h2>
         <ul class="bicycle-information font-2-xs color-5">
           <li>
-            <img src="../img/icons/electric.svg" alt="">
+            <img src="../img/icons/electric.svg" width="32" height="32" alt="">
             <h3 class="font-1-m color-0">Motor Elétrico</h3>
             <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
           </li>
           <li>
-            <img src="../img/icons/speed.svg" alt="">
+            <img src="../img/icons/speed.svg" width="32" height="32" alt="">
             <h3 class="font-1-m color-0">50 km/h</h3>
             <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
           <li>
-            <img src="../img/icons/tracker.svg" alt="">
+            <img src="../img/icons/tracker.svg" width="32" height="32" alt="">
             <h3 class="font-1-m color-0">Rastreador</h3>
             <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
           </li>
           <li>
-            <img src="../img/icons/carbon.svg" alt="">
+            <img src="../img/icons/carbon.svg" width="32" height="32" alt="">
             <h3 class="font-1-m color-0">Fibra de Carbono</h3>
             <p>Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
           </li>
@@ -93,14 +94,14 @@
     <ul>
       <li>
         <a href="./magic.html">
-          <img src="../img/bicycles/magic.jpg" alt="Bicicleta preta modelo Magic Might">
+          <img src="../img/bicycles/magic.jpg" width="1120" height="680" alt="Bicicleta preta modelo Magic Might">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="front-2-m">R$ 2499</span>
         </a>
       </li>
       <li>
         <a href="./nebula.html">
-          <img src="../img/bicycles/nebula.jpg" alt="Bicicleta cinza modelo Nebula Cosmic">
+          <img src="../img/bicycles/nebula.jpg" width="1120" height="680" alt="Bicicleta cinza modelo Nebula Cosmic">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="front-2-m">R$ 3999</span>
         </a>
@@ -111,7 +112,7 @@
   <article class="bicycle-insurance-bg">
     <div class="bicycle-insurance container">
       <div class="bicycle-insurance-image">
-        <img src="../img/pictures/insurance.jpg" alt="Pessoa sentada em bicicleta parada">
+        <img src="../img/pictures/insurance.jpg" width="1360" height="1512" alt="Pessoa sentada em bicicleta parada">
       </div>
       <div class="bicycle-insurance-content">
         <h2 class="font-1-xxl color-0">Pedale mais tranquilo com o nosso <span class="color-primary-1">seguro.</span></h2>
@@ -123,7 +124,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="../img/bikcraft.svg" alt="Bikcraft">
+      <img src="../img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
       <div>
         <h2 class="font-2-l-b color-0">CONTATO</h2>
@@ -135,13 +136,13 @@
         </ul>
         <div class="footer-media">
           <a href="/">
-            <img src="../img/media/instagram.svg" alt="Instagram">
+            <img src="../img/media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="/">
-            <img src="../img/media/facebook.svg" alt="Facebook">
+            <img src="../img/media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="/">
-            <img src="../img/media/youtube.svg" alt="Youtube">
+            <img src="../img/media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
