--- a/budget.html
+++ b/budget.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Orçamento | Bikcraft</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -51,36 +52,36 @@
           <label for="nimbus">Nimbus Stark <span>R$ 4999</span></label>
           <div class="budget-detail">
             <ul>
-              <li><img src="./img/icons/electric.svg" alt="">Motor Elétrico</li>
-              <li><img src="./img/icons/carbon.svg" alt="">Fira de Carbono</li>
-              <li><img src="./img/icons/speed.svg" alt="">50 km/h</li>
-              <li><img src="./img/icons/tracker.svg" alt="">Rastreador</li>
+              <li><img src="./img/icons/electric.svg" width="32" height="32" alt="">Motor Elétrico</li>
+              <li><img src="./img/icons/carbon.svg" width="32" height="32" alt="">Fira de Carbono</li>
+              <li><img src="./img/icons/speed.svg" width="32" height="32" alt="">50 km/h</li>
+              <li><img src="./img/icons/tracker.svg" width="32" height="32" alt="">Rastreador</li>
             </ul>
-            <img src="./img/bicycles/nimbus.jpg" alt="Bicicleta preta">
+            <img src="./img/bicycles/nimbus.jpg" width="1120" height="680" alt="Bicicleta preta">
           </div>
 
           <input type="radio" name="product" id="magic">
           <label for="magic">Magic Might <span>R$ 2499</span></label>
           <div class="budget-detail">
             <ul>
-              <li><img src="./img/icons/electric.svg" alt="">Motor Elétrico</li>
-              <li><img src="./img/icons/carbon.svg" alt="">Fira de Carbono</li>
-              <li><img src="./img/icons/speed.svg" alt="">45 km/h</li>
-              <li><img src="./img/icons/tracker.svg" alt="">Rastreador</li>
+              <li><img src="./img/icons/electric.svg" width="32" height="32" alt="">Motor Elétrico</li>
+              <li><img src="./img/icons/carbon.svg" width="32" height="32" alt="">Fira de Carbono</li>
+              <li><img src="./img/icons/speed.svg" width="32" height="32" alt="">45 km/h</li>
+              <li><img src="./img/icons/tracker.svg" width="32" height="32" alt="">Rastreador</li>
             </ul>
-            <img src="./img/bicycles/magic.jpg" alt="Bicicleta preta">
+            <img src="./img/bicycles/magic.jpg" width="1120" height="680" alt="Bicicleta preta">
           </div>
 
           <input type="radio" name="product" id="nebula">
           <label for="nebula">Nebula Cosmic <span>R$ 3999</span></label>
           <div class="budget-detail">
             <ul>
-              <li><img src="./img/icons/electric.svg" alt="">Motor Elétrico</li>
-              <li><img src="./img/icons/carbon.svg" alt="">Fira de Carbono</li>
-              <li><img src="./img/icons/speed.svg" alt="">40 km/h</li>
-              <li><img src="./img/icons/tracker.svg" alt="">Rastreador</li>
+              <li><img src="./img/icons/electric.svg" width="32" height="32" alt="">Motor Elétrico</li>
+              <li><img src="./img/icons/carbon.svg" width="32" height="32" alt="">Fira de Carbono</li>
+              <li><img src="./img/icons/speed.svg" width="32" height="32" alt="">40 km/h</li>
+              <li><img src="./img/icons/tracker.svg" width="32" height="32" alt="">Rastreador</li>
             </ul>
-            <img src="./img/bicycles/nebula.jpg" alt="Bicicleta cinza">
+            <img src="./img/bicycles/nebula.jpg" width="1120" height="680" alt="Bicicleta cinza">
           </div>
         </div>
 
@@ -146,7 +147,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
       <div>
         <h2 class="font-2-l-b color-0">CONTATO</h2>
@@ -158,13 +159,13 @@
         </ul>
         <div class="footer-media">
           <a href="/">
-            <img src="./img/media/instagram.svg" alt="Instagram">
+            <img src="./img/media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="/">
-            <img src="./img/media/facebook.svg" alt="Facebook">
+            <img src="./img/media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="/">
-            <img src="./img/media/youtube.svg" alt="Youtube">
+            <img src="./img/media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
