--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Bikcraft - Bicicletas Elétricas</title>
+
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -16,7 +18,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
       </a>
       <nav aria-label="primária">
         <ul class="header-menu font-1-m color-0">
@@ -35,9 +37,10 @@
         <p class="font-2-l color-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="button" href="./bicycles.html">selecione a sua</a>
       </div>
-      <div>
-        <img src="./img/pictures/introduction.jpg" alt="Bibicleta elétrica preta">
-      </div>
+      <picture>
+        <source media="(max-width: 800px)" srcset="./img/bicycles/nimbus.jpg">
+        <img src="./img/pictures/introduction.jpg" width="1280" height="1600" alt="Bibicleta elétrica preta">
+      </picture>
     </div>
   </main>
 
@@ -46,21 +49,21 @@
     <ul>
       <li>
         <a href="./bicycles/magic.html">
-          <img src="./img/bicycles/magic-home.jpg" alt="Bicicleta preta">
+          <img src="./img/bicycles/magic-home.jpg" width="920" height="1040" alt="Bicicleta preta">
           <h3 class="font-1-xl">Magic Might</h3>
           <span class="front-2-m">R$ 2499</span>
         </a>
       </li>
       <li>
         <a href="./bicycles/nimbus.html">
-          <img src="./img/bicycles/nimbus-home.jpg" alt="Bicicleta preta">
+          <img src="./img/bicycles/nimbus-home.jpg" width="920" height="1040" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="front-2-m">R$ 4999</span>
         </a>
       </li>
       <li>
         <a href="./bicycles/nebula.html">
-          <img src="./img/bicycles/nebula-home.jpg" alt="Bicicleta cinza">
+          <img src="./img/bicycles/nebula-home.jpg" width="920" height="1040" alt="Bicicleta cinza">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="front-2-m">R$ 3999</span>
         </a>
@@ -78,37 +81,37 @@
 
         <div class="technology-content-advantage">
           <div>
-            <img src="./img/icons/electric.svg" alt="">
+            <img src="./img/icons/electric.svg" width="32" height="32" alt="">
             <h3 class="font-1-l color-0">Motor Elétrico</h3>
             <p class="font-2-s color-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
           </div>
           <div>
-            <img src="./img/icons/tracker.svg" alt="">
+            <img src="./img/icons/tracker.svg" width="32" height="32" alt="">
             <h3 class="font-1-l color-0">Rastreador</h3>
             <p class="font-2-s color-5">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
           </div>
         </div>
       </div>
       <div class="technology-image">
-        <img src="./img/pictures/technology.jpg" alt="">
+        <img src="./img/pictures/technology.jpg" width="1200" height="1920" alt="">
       </div>
     </div>
   </article>
   <section class="partners" aria-label="Nossos parceiros">
     <h2 class="container font-1-xxl">nossos parceiros<span class="color-primary-1">.</span> </h2>
     <ul>
-      <li><img src="./img/partners/caravan.svg" alt="caravan"></li>
-      <li><img src="./img/partners/dogs.svg" alt="dogs"></li>
-      <li><img src="./img/partners/flexblog.svg" alt="flexblog"></li>
-      <li><img src="./img/partners/handel.svg" alt="handel"></li>
-      <li><img src="./img/partners/lescone.svg" alt="lescone"></li>
-      <li><img src="./img/partners/ranek.svg" alt="ranek"></li>
-      <li><img src="./img/partners/surfbot.svg" alt="surfbot"></li>
-      <li><img src="./img/partners/wildbeast.svg" alt="wildbeast"></li>
+      <li><img src="./img/partners/caravan.svg" width="140" height="38" alt="caravan"></li>
+      <li><img src="./img/partners/dogs.svg" width="152" height="39" alt="dogs"></li>
+      <li><img src="./img/partners/flexblog.svg" width="165" height="38" alt="flexblog"></li>
+      <li><img src="./img/partners/handel.svg" width="139" height="50" alt="handel"></li>
+      <li><img src="./img/partners/lescone.svg" width="208" height="41" alt="lescone"></li>
+      <li><img src="./img/partners/ranek.svg" width="149" height="36" alt="ranek"></li>
+      <li><img src="./img/partners/surfbot.svg" width="200" height="49" alt="surfbot"></li>
+      <li><img src="./img/partners/wildbeast.svg" width="196" height="34" alt="wildbeast"></li>
     </ul>
   </section>
   <section class="testimony" aria-label="Depoimento">
-    <img src="./img/pictures/testimony.jpg" alt="">
+    <img src="./img/pictures/testimony.jpg" width="1560" height="1360" alt="">
     <div class="testimony-content">
       <blockquote class="font-1-xl color-primary-5">
         <p>Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</p>
@@ -150,7 +153,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
 
       <div>
         <h2 class="font-2-l-b color-0">CONTATO</h2>
@@ -162,13 +165,13 @@
         </ul>
         <div class="footer-media">
           <a href="/">
-            <img src="./img/media/instagram.svg" alt="Instagram">
+            <img src="./img/media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="/">
-            <img src="./img/media/facebook.svg" alt="Facebook">
+            <img src="./img/media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="/">
-            <img src="./img/media/youtube.svg" alt="Youtube">
+            <img src="./img/media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
