--- a/insurance.html
+++ b/insurance.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&family=Merriweather:wght@900&display=swap" rel="stylesheet">
   <title>Seguros | Bikcraft</title>
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -16,7 +17,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./img/bikcraft.svg" alt="Logo Bikcraft">
+        <img src="./img/bikcraft.svg" width="136" height="32" alt="Logo Bikcraft">
       </a>
       <nav aria-label="primária">
         <ul class="header-menu font-1-m color-0">
@@ -71,32 +72,32 @@
 
       <ul>
         <li>
-          <img src="./img/icons/electric.svg" alt="">
+          <img src="./img/icons/electric.svg" width="32" height="32" alt="">
           <h3 class="font-1-l color-0">Reparo Elétrico</h3>
           <p class="font-2-s color-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
         </li>
         <li>
-          <img src="./img/icons/carbon.svg" alt="">
+          <img src="./img/icons/carbon.svg" width="32" height="32" alt="">
           <h3 class="font-1-l color-0">Carbono</h3>
           <p class="font-2-s color-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
         </li>
         <li>
-          <img src="./img/icons/sustainable.svg" alt="">
+          <img src="./img/icons/sustainable.svg" width="32" height="32" alt="">
           <h3 class="font-1-l color-0">Sustentável</h3>
           <p class="font-2-s color-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
         </li>
         <li>
-          <img src="./img/icons/tracker.svg" alt="">
+          <img src="./img/icons/tracker.svg" width="32" height="32" alt="">
           <h3 class="font-1-l color-0">Rastreador</h3>
           <p class="font-2-s color-5">Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.</p>
         </li>
         <li>
-          <img src="./img/icons/insurance.svg" alt="">
+          <img src="./img/icons/insurance.svg" width="32" height="32" alt="">
           <h3 class="font-1-l color-0">Segurança</h3>
           <p class="font-2-s color-5">Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.</p>
         </li>
         <li>
-          <img src="./img/icons/speed.svg" alt="">
+          <img src="./img/icons/speed.svg" width="32" height="32" alt="">
           <h3 class="font-1-l color-0">Rapidez</h3>
           <p class="font-2-s color-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
@@ -142,7 +143,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <img src="./img/bikcraft.svg" width="136" height="32" width="32" height="32" alt="Bikcraft">
 
       <div>
         <h2 class="font-2-l-b color-0">CONTATO</h2>
@@ -154,13 +155,13 @@
         </ul>
         <div class="footer-media">
           <a href="/">
-            <img src="./img/media/instagram.svg" alt="Instagram">
+            <img src="./img/media/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="/">
-            <img src="./img/media/facebook.svg" alt="Facebook">
+            <img src="./img/media/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="/">
-            <img src="./img/media/youtube.svg" alt="Youtube">
+            <img src="./img/media/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
