add page selection in menu

--- a/bicycles/nimbus.html
+++ b/bicycles/nimbus.html
@@ -45,7 +45,7 @@
       </div>
       <div class="bicycle-content">
         <p class="font-2-l color-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-width="136" height="32" 
+
         <div class="bicycle-buy">
           <a class="button" href="../budget.html">comprar agora</a>
           <span class="font-1-xs color-6"><img src="../img/icons/delivery.svg" width="16" height="16" alt="">entrega em 5 dias</span>
@@ -159,6 +159,7 @@ width="136" height="32"
       <p class="footer-copy font-2-m color-6">Bikcraft © Alguns direitos reservados.</p>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
