--- a/bicycles/nimbus.html
+++ b/bicycles/nimbus.html
@@ -11,6 +11,8 @@
   <title>Nimbus Stark | Bikcraft</title>
   <link rel="preload" href="../css/style.css" as="style">
   <link rel="stylesheet" href="../css/style.css">
+
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="bicycle">
@@ -47,7 +49,7 @@
         <p class="font-2-l color-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
         <div class="bicycle-buy">
-          <a class="button" href="../budget.html">comprar agora</a>
+          <a class="button" href="../budget.html?budget-type=bikcraft&product=nimbus">comprar agora</a>
           <span class="font-1-xs color-6"><img src="../img/icons/delivery.svg" width="16" height="16" alt="">entrega em 5 dias</span>
           <span class="font-1-xs color-6"><img src="../img/icons/stock.svg" width="16" height="16" alt="">18 em estoque</span>
         </div>
