--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
   <title>Contatos | Bikcraft</title>
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body id="contact">
