--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
+
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
